--- a/index.html
+++ b/index.html
@@ -33,20 +33,14 @@
     </header>
 
     <section id="home" class="hero">
-        <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
-            <h1>Blooming Beauty for Every Occasion</h1>
-            <p>Handcrafted floral arrangements that tell your unique story</p>
-            <a href="#contact" class="btn pulse">Book a Consultation</a>
+        <div class="hero-overlay">
+            <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
+                <h1>Blooming Beauty for Every Occasion</h1>
+                <p>Handcrafted floral arrangements that tell your unique story</p>
+                <a href="#contact" class="btn pulse">Book a Consultation</a>
+            </div>
         </div>
     </section>
-
-    <style>
-        .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), 
-                        url('https://images.unsplash.com/photo-1487530811176-3780de880c2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80') no-repeat center center/cover;
-            min-height: 100vh; /* Ensure minimum height */
-        }
-    </style>
 
     <section id="about" class="about">
         <div class="container">
@@ -267,3 +261,4 @@
     </script>
 </body>
 </html>
+
